Update failing tests